src/LuckyDraw V1.0/src/objects/Charket__WeChatEvent__c.object
<CustomObject>
    <fields>
        <fullName>Charket__ApexJobId__c</fullName>
        <label>Apex Job ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Campaign__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign</label>
        <referenceTo>Campaign</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__Content__c</fullName>
        <label>Content</label>
        <length>600</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__ErrorCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__FilterCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Filter Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__FollowerMessageId__c</fullName>
        <externalId>true</externalId>
        <label>Follower Message ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Charket__LocationLabel__c</fullName>
        <label>Location Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__Location__c</fullName>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Charket__MassSendTo__c</fullName>
        <label>Mass Send To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Charket__MessageDataId__c</fullName>
        <label>Message Data ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__MessageId__c</fullName>
        <label>Message ID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__ScheduledDate__c</fullName>
        <label>Scheduled Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Charket__SendBy__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Send By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__SentCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Sent Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__StatusDetail__c</fullName>
        <label>Status Detail</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Charket__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Commit Success</fullName>
                </value>
                <value>
                    <fullName>Commit Failed</fullName>
                </value>
                <value>
                    <fullName>Send Success</fullName>
                </value>
                <value>
                    <fullName>Send Failed</fullName>
                </value>
                <value>
                    <fullName>Approval Failed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__TotalCount__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Total Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Charket__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Mass</fullName>
                </value>
                <value>
                    <fullName>Subscribe</fullName>
                </value>
                <value>
                    <fullName>Unsubscribe</fullName>
                </value>
                <value>
                    <fullName>Scan</fullName>
                </value>
                <value>
                    <fullName>Menu click</fullName>
                </value>
                <value>
                    <fullName>Location</fullName>
                </value>
                <value>
                    <fullName>Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Charket__WeChatAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Account</label>
        <referenceTo>Charket__WeChatAccount__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatCoupon__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Coupon</label>
        <referenceTo>Charket__WeChatCoupon__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatEvent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Event</label>
        <referenceTo>Charket__WeChatEvent__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatFollower__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Follower</label>
        <referenceTo>Charket__WeChatFollower__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMenuItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Menu Item</label>
        <referenceTo>Charket__WeChatMenuItem__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChat_Events</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatMessage__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Message</label>
        <referenceTo>Charket__WeChatMessage__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatNotificationTemplate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Notification Template</label>
        <referenceTo>Charket__WeChatNotificationTemplate__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatPass__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>WeChat Pass</label>
        <referenceTo>Charket__WeChatPass__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatQRCode__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat QR Code</label>
        <referenceTo>Charket__WeChatQRCode__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatResponseKeyword__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Response Keyword</label>
        <referenceTo>Charket__WeChatResponseKeyword__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Charket__WeChatTag__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WeChat Tag</label>
        <referenceTo>Charket__WeChatTag__c</referenceTo>
        <relationshipLabel>WeChat Events</relationshipLabel>
        <relationshipName>WeChatEvents</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>WeChat Event</label>
    <listViews>
        <fullName>Charket__All</fullName>
        <columns>NAME</columns>
        <columns>Charket__WeChatAccount__c</columns>
        <columns>Charket__Status__c</columns>
        <columns>Charket__SendBy__c</columns>
        <columns>Charket__MessageId__c</columns>
        <columns>Charket__ErrorCount__c</columns>
        <columns>Charket__FilterCount__c</columns>
        <columns>Charket__SentCount__c</columns>
        <columns>Charket__TotalCount__c</columns>
        <columns>Charket__Type__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WE-{0000000}</displayFormat>
        <label>Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>WeChat Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>